fixed shop item css on smaller screen sizes

--- a/styles/ItemPage.module.scss
+++ b/styles/ItemPage.module.scss
@@ -17,8 +17,8 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      min-width: 600px;
-      max-width: 800px;
+      // min-width: 600px;
+      // max-width: 800px;
       padding: 1rem;
       .part {
         display: flex;
